RESOLVED FIXED98310
[GTK] Inspector is not directly useable in GtkLauncher/MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=98310
Summary [GTK] Inspector is not directly useable in GtkLauncher/MiniBrowser
Adrian Perez
Reported 2012-10-03 15:26:27 PDT
[GTK] Inspector is not directly useable in GtkLauncher/MiniBrowser
Attachments
Patch (2.65 KB, patch)
2012-10-03 15:41 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2012-10-03 15:28:51 PDT
Passing “--enable-developer-extras=true” in the command line to GtkLauncher/MiniBrowser adds the “Inspect Element” option in the context menus, but then the option does not work because it does not find the inspector files when WebKitGTK+ has not been installed to the system. It would be desirable that thet inspector is useable directly from the source tree.
Adrian Perez
Comment 2 2012-10-03 15:41:26 PDT
WebKit Review Bot
Comment 3 2012-10-03 17:14:38 PDT
Comment on attachment 166975 [details] Patch Clearing flags on attachment: 166975 Committed r130349: <http://trac.webkit.org/changeset/130349>
WebKit Review Bot
Comment 4 2012-10-03 17:14:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.