Tools/MiniBrowser/gtk/main.c
@@ -222,6 +222,10 @@ int main(int argc, char *argv[])
     }
     g_option_context_free (context);
 
+#ifdef WEBKIT_EXEC_PATH
+    g_setenv("WEBKIT_INSPECTOR_PATH", WEBKIT_EXEC_PATH "resources/inspector", FALSE);
+#endif /* WEBKIT_EXEC_PATH */
+
     if (uriArguments) {
         int i;
 
